Text tweaks and some hackish alignment fixes

--- a/static/base.css
+++ b/static/base.css
@@ -51,6 +51,9 @@ HR {
 }
 
 #new_strain_modal_title {
+    font-size: 1rem;
+    font-weight: bold;
+    text-decoration: underline;
     padding-bottom: .5rem;
 }
 
@@ -82,6 +85,10 @@ HR {
     padding-bottom: .5rem;
 }
 
+#thc_pct_label {
+    margin-right: 12px; /* yeah yeah... */
+}
+
 #con_cbd_pct {
     float: right;
     padding-bottom: .5rem;
@@ -90,6 +97,10 @@ HR {
 #con_company {
     clear: left;
     padding-bottom: .5rem;
+}
+
+#company_label {
+    margin-right: 11px; /* yeah yeah... */
 }
 
 #con_dispensary  {
@@ -115,12 +126,6 @@ HR {
 
 #sativa_pct, #indica_pct, #thc_pct, #cbd_pct {
     width: 3rem;
-}
-
-#new_strain_modal_title {
-    font-size: 1em;
-    font-weight: bold;
-    text-decoration: underline;
 }
 
 .strain_div {
